# ToolBase

./: CMakeLists.txt  LICENSE.txt  README.md
Solutions/: ToolBase.sln
TB_Base/: TB_Base.v140.vcxproj  TB_Base.v140.vcxproj.filters  TB_Base.vcxproj
TB_Base/include/: TBApplication.h  TBCommon.h  TBEvent.h  TBMath.h  TBMessageBox.h  TBWidget.h
TB_Base/src/: TBApplication.cpp  TBMessageBox.cpp  TBWidget.cpp  WinMain.cpp
include/: TBApplication.h  TBCommon.h  TBEvent.h  TBMath.h  TBMessageBox.h  TBTime.h  TBWidget.h
props/: ToolBase.props  Win32.props
source/: CMakeLists.txt  TBApplication.cpp  TBMessageBox.cpp  TBTime.cpp  TBWidget.cpp  WinMain.cpp
test/: CMakeLists.txt  test.cpp
